--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -78,6 +78,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="100dp"
+        android:textColor="@color/contentTextColor"
         android:textSize="24sp"
         android:text="Location"/>
     <TextView
@@ -87,6 +88,7 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@id/locationTextView"
         android:layout_marginTop="46dp"
+        android:textColor="@color/contentTextColor"
         android:textSize="24sp"
         android:text="Temperature"/>
 
@@ -107,6 +109,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="250dp"
         android:textSize="18sp"
+        android:textColor="@color/contentTextColor"
         android:text="Weather Description"/>
 
     <TextView
@@ -117,6 +120,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
         android:textSize="18sp"
+        android:textColor="@color/contentTextColor"
         android:text="Air Quality"/>
     <Button
         android:id="@+id/newsFeedButton"
